// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header default 1`] = `
<div
  className="withRouter(Header)-root"
>
  <header
    className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary"
  >
    <div
      className="MuiToolbar-root MuiToolbar-gutters"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root MuiIconButton-root withRouter(Header)-menuButton"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            color={undefined}
            focusable="false"
            onClick={[Function]}
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <div>
        <div>
          <ul
            className="MuiList-root MuiList-padding"
            onBlur={[Function]}
            onKeyDown={[Function]}
            role="menu"
          >
            <li
              className="MuiListItem-container"
            >
              <div
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction MuiMenuItem-root"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <span
                  className="MuiTouchRipple-root"
                />
              </div>
              <div
                className="MuiListItemSecondaryAction-root"
              >
                <button
                  className="MuiButtonBase-root MuiIconButton-root"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root"
                      color={undefined}
                      focusable="false"
                      onClick={[Function]}
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </li>
            <hr
              className="MuiDivider-root"
              onFocus={[Function]}
              tabIndex={-1}
            />
            <a
              aria-current="true"
              className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
              href="/"
              onClick={[Function]}
              style={Object {}}
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    Home
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </a>
            <a
              aria-current={false}
              className="withRouter(NavMenuItem)-nav"
              href="/auctions/new"
              onClick={[Function]}
              style={undefined}
            >
              <li
                className="MuiButtonBase-root MuiButtonBase-disabled MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-disabled MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    Create Auction
                  </span>
                </div>
              </li>
            </a>
            <hr
              className="MuiDivider-root"
              onFocus={[Function]}
              tabIndex={-1}
            />
            <a
              aria-current={false}
              className="withRouter(NavMenuItem)-nav"
              href="/rules"
              onClick={[Function]}
              style={undefined}
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    Rules
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </a>
            <a
              aria-current={false}
              className="withRouter(NavMenuItem)-nav"
              href="/about"
              onClick={[Function]}
              style={undefined}
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    About
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </a>
          </ul>
        </div>
      </div>
      <a
        className="withRouter(Header)-headerLink"
        href="/"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit"
        >
          The Bid
        </h2>
      </a>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-colorInherit MuiButton-flat"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Login
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </header>
</div>
`;

exports[`Storyshots Header logged in 1`] = `
<div
  className="withRouter(Header)-root"
>
  <header
    className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary"
  >
    <div
      className="MuiToolbar-root MuiToolbar-gutters"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root MuiIconButton-root withRouter(Header)-menuButton"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            color={undefined}
            focusable="false"
            onClick={[Function]}
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <div>
        <div>
          <ul
            className="MuiList-root MuiList-padding"
            onBlur={[Function]}
            onKeyDown={[Function]}
            role="menu"
          >
            <li
              className="MuiListItem-container"
            >
              <div
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction MuiMenuItem-root"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <span
                  className="MuiTouchRipple-root"
                />
              </div>
              <div
                className="MuiListItemSecondaryAction-root"
              >
                <button
                  className="MuiButtonBase-root MuiIconButton-root"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root"
                      color={undefined}
                      focusable="false"
                      onClick={[Function]}
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </li>
            <hr
              className="MuiDivider-root"
              onFocus={[Function]}
              tabIndex={-1}
            />
            <a
              aria-current="true"
              className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
              href="/"
              onClick={[Function]}
              style={Object {}}
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    Home
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </a>
            <a
              aria-current={false}
              className="withRouter(NavMenuItem)-nav"
              href="/auctions/new"
              onClick={[Function]}
              style={undefined}
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    Create Auction
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </a>
            <hr
              className="MuiDivider-root"
              onFocus={[Function]}
              tabIndex={-1}
            />
            <a
              aria-current={false}
              className="withRouter(NavMenuItem)-nav"
              href="/rules"
              onClick={[Function]}
              style={undefined}
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    Rules
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </a>
            <a
              aria-current={false}
              className="withRouter(NavMenuItem)-nav"
              href="/about"
              onClick={[Function]}
              style={undefined}
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="MuiListItemText-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
                  >
                    About
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </a>
          </ul>
        </div>
      </div>
      <a
        className="withRouter(Header)-headerLink"
        href="/"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit"
        >
          The Bid
        </h2>
      </a>
      <button
        className="MuiButtonBase-root MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-colorInherit MuiButton-flat"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Logout
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </header>
</div>
`;
